# Simple-C-Compiler

./: .actrc  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp.yml
AST/: ASTNode.h  ASTPrinter.cpp  ASTPrinter.h  ArithmeticExpression.cpp  ArithmeticExpression.h  AssignmentStatement.cpp  AssignmentStatement.h  BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  ComputableExpression.cpp  ComputableExpression.h  ConditionalExpression.cpp  ConditionalExpression.h  Declaration.cpp  Declaration.h  Expression.h  Function.cpp  Function.h  FunctionCall.cpp  FunctionCall.h  IfBlock.cpp  IfBlock.h  IfStatement.cpp  IfStatement.h  IncrementDecrementExpression.cpp  IncrementDecrementExpression.h  Integer.cpp  Integer.h  IntegerDeclaration.cpp  IntegerDeclaration.h  NotExpression.cpp  NotExpression.h  NullExpressionStatement.h  Program.cpp  Program.h  Statement.h  StatementList.cpp  StatementList.h  String.cpp  (+10 more)
compiler/: CMakeLists.txt  main.cpp  main.h.in
include/: print.h  token.h
lib/: CMakeLists.txt  Visitor.h  tokenStream.cpp  tokenStream.h
phases/: CMakeLists.txt
phases/lexer/: CMakeLists.txt  lexer.cpp  lexer.h  tokenizer.cpp  tokenizer.h
phases/parser/: ASTPrinter.cpp  ASTPrinter.h  CMakeLists.txt  parser.cpp  parser.h
tests/: CMakeLists.txt  test_compiler.cpp  test_compiler.h  test_lexer.cpp  test_lexer.h
tests/test_cases/: arithmetics.jas  comments.jas  conditionals.jas  instantiate_int.jas  test.jas
tests/test_cases_answers/: arithmetics.txt  comments.txt  conditionals.txt  instantiate_int.txt  printf.txt
